form wrap fixed width

--- a/src/components/Authentification/LogInForm/LogInForm.module.css
+++ b/src/components/Authentification/LogInForm/LogInForm.module.css
@@ -169,7 +169,7 @@ input:not(output):invalid {
 @media screen and (min-width: 1280px) {
   .textWrap {
     align-self: center;
-    width: 50%;
+    width: 40%;
     margin: 0 auto;
   }
 
